<resources>
    <string name="app_name">EldroidApp</string>
    <string name="appSaying">List your DOs, then DO your list!</string>
    <string name="dolist">DoList</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="seeTask">See Tasks</string>
    <string name="greetings">Hi %1$s!</string>
    <string name="to_do">To Do</string>
    <string name="add">Add</string>
</resources>