<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluegreen_bg"
    android:orientation="vertical"
    tools:context=".ListActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/greetings"
        android:textColor="@color/material_dynamic_primary30"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_todolistinput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/to_do"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#455A64"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_addList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_button_bg"
            android:text="@string/add"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvToDoList"
        android:layout_width="match_parent"
        android:layout_height="601dp" />

</LinearLayout>